--- a/project/hkzf-mobile/src/pages/Index/index.scss
+++ b/project/hkzf-mobile/src/pages/Index/index.scss
@@ -2,23 +2,141 @@
     height: 212px;
 }
 
+// 使用scss的语法书写样式
 .nav {
     padding: 10px 0;
+    /* 导航菜单图片宽度 */
+    img {
+        width: 48px;
+    }
+    /* 导航菜单标题 */
+    h2 {
+        margin-top: 7px;
+        font-size: 13px;
+        font-weight: normal;
+    }
+    /* 菜单,居中对齐 */
+    .am-flexbox-item {
+        text-align: center;
+    }
 }
 
-/* 导航菜单图片宽度 */
-.nav img {
-    width: 48px;
+// 租房小组样式：
+.group {
+  background-color: #f6f5f6;
+  overflow: hidden;
+  padding: 0 10px;
+    
+  // 标题
+  .group-title {
+    position: relative;
+    margin: 15px 0px 15px 10px;
+    font-size: 15px;
+
+    // 更多
+    .more {
+      color: #787d82;
+      position: absolute;
+      right: 0;
+      font-size: 14px;
+      font-weight: normal;
+    }
+  }
+
+  // 覆盖默认背景色
+  .am-grid .am-flexbox {
+    background-color: inherit;
+
+    .am-flexbox-item .am-grid-item-content {
+      padding: 0;
+      padding-bottom: 10px;
+    }
+  }
+
+  .group-item {
+    height: 75px;
+
+    .desc {
+      .title {
+        font-weight: bold;
+        font-size: 13px;
+        margin-bottom: 5px;
+      }
+      .info {
+        font-size: 12px;
+        color: #999;
+      }
+    }
+    img {
+      width: 55px;
+    }
+  }
+
+  .am-flexbox-align-stretch {
+    margin-bottom: 10px;
+
+    .am-grid-item {
+      background-color: #fff;
+
+      &:first-child {
+        margin-right: 10px;
+      }
+    }
+  }
 }
 
-/* 导航菜单标题 */
-.nav h2 {
-    margin-top: 7px;
-    font-size: 13px;
-    font-weight: normal;
+// 最新资讯：
+.news {
+  padding: 10px;
+  background-color: #fff;
+  overflow: hidden;
+
+  .group-title {
+    margin: 10px 0 5px 10px;
+    font-size: 15px;
+  }
+
+  .news-item {
+    height: 120px;
+    padding: 15px 10px 15px 0;
+    border-bottom: 1px solid #e5e5e5;
+  }
+
+  .news-item:last-child {
+    border: 0;
+  }
+
+  .imgwrap {
+    float: left;
+    height: 90px;
+    width: 120px;
+  }
+
+  .img {
+    height: 90px;
+    width: 120px;
+  }
+
+  .content {
+    overflow: hidden;
+    height: 100%;
+    padding-left: 12px;
+  }
+
+  .title {
+    margin-bottom: 15px;
+    font-size: 14px;
+  }
+
+  .info {
+    width: 100%;
+    color: #9c9fa1;
+    font-size: 12px;
+  }
+
+  .message-title {
+    margin-bottom: 48px;
+  }
 }
 
-/* 菜单,居中对齐 */
-.nav .am-flexbox-item {
-    text-align: center;
-}
+  
