--- a/project/hkzf-mobile/src/index.css
+++ b/project/hkzf-mobile/src/index.css
@@ -1,9 +1,10 @@
 html,
 body {
-  height: 100%;
   font-family: 'Microsoft YaHei';
   color: #333;
   background-color: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 * {
@@ -16,4 +17,11 @@ body {
 h2,
 p {
   margin: 0;
+}
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
 }
