--- a/project/hkzf-mobile/src/pages/Index/index.scss
+++ b/project/hkzf-mobile/src/pages/Index/index.scss
@@ -1,24 +1,80 @@
 .swiper {
-    height: 212px;
+  // 轮播图父元素使用相对定位
+  position: relative;
+  height: 212px;
+
+  // 顶部导航
+  .search-box {
+    // 绝对定位
+    position: absolute;
+    top: 25px;
+    width: 100%;
+    padding: 0 10px;
+
+    // 左侧白色区域
+    .search {
+      flex: 1;
+      height: 34px;
+      margin: 0 10px;
+      padding: 5px 5px 5px 8px;
+      border-radius: 3px;
+      background-color: #fff;
+
+      // 位置
+      .location {
+        .icon-arrow {
+          margin-left: 2px;
+          font-size: 12px;
+          color: #7f7f80;
+        }
+      }
+
+      // 搜索表单
+      .form {
+        border-left: solid 1px #e5e5e5;
+        margin-left: 12px;
+        line-height: 16px;
+
+        .icon-seach {
+          vertical-align: middle;
+          padding: 0 2px 0 12px;
+          color: #9c9fa1;
+          font-size: 15px;
+        }
+
+        .text {
+          padding-left: 4px;
+          font-size: 13px;
+          color: #9c9fa1;
+        }
+      }
+    }
+
+    // 右侧地图图标
+    .icon-map {
+      font-size: 25px;
+      color: #fff;
+    }
+  }
 }
 
 // 使用scss的语法书写样式
 .nav {
-    padding: 10px 0;
-    /* 导航菜单图片宽度 */
-    img {
-        width: 48px;
-    }
-    /* 导航菜单标题 */
-    h2 {
-        margin-top: 7px;
-        font-size: 13px;
-        font-weight: normal;
-    }
-    /* 菜单,居中对齐 */
-    .am-flexbox-item {
-        text-align: center;
-    }
+  padding: 10px 0;
+  /* 导航菜单图片宽度 */
+  img {
+      width: 48px;
+  }
+  /* 导航菜单标题 */
+  h2 {
+      margin-top: 7px;
+      font-size: 13px;
+      font-weight: normal;
+  }
+  /* 菜单,居中对齐 */
+  .am-flexbox-item {
+      text-align: center;
+  }
 }
 
 // 租房小组样式：
