--- a/project/hkzf-mobile/src/index.css
+++ b/project/hkzf-mobile/src/index.css
@@ -15,13 +15,18 @@ body {
 
 /* 所有的h2标签和P标签都要把margin给去掉 */
 h2,
+h3,
 p {
   margin: 0;
 }
 
+/* 
+  为了使用百度地图API显示地图所设置
+  只有父元素高度为100%,子元素设置高度100%才会生效
+*/
 html,
 body,
 #root,
-.app {
+.App {
   height: 100%;
 }
